Add support for restore metadata and settings from snapshots
Extended the `RESTORE` statement with more keywords to fine tune
what to restore from a snapshot other than tables.
The existing ``ALL`` keyword will restore everything now, not only
tables like before. To restore all tables only, a new ``TABLES``
keywords is introduced.
Each ``data_section`` can be restored standalone and can also be combined
with others to restore multiple concrete data at once.

Closes #10822.